# librime

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  build.bat
.claude/: settings.local.json
.github/workflows/: commit-ci.yml  macos-build.yml  release-ci.yml  windows-build-with-plugins.yml  windows-build.yml
src/: rime_api_impl.h
src/rime/: context.cc  engine.cc  platform_info.cc  platform_info.h  segmentation.cc  setup.cc
src/rime/config/: config_compiler.cc  config_component.cc  config_cow_ref.h  config_data.cc
src/rime/dict/: table.h  text_db.cc
src/rime/gear/: selector.cc  selector.h
src/rime/lever/: user_dict_manager.cc
test/: CMakeLists.txt  platform_info_test.cc  predict_test.cc
